--- a/San_Nicolò_d'Arcidano.mw
+++ b/San_Nicolò_d'Arcidano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Nicolò d'Arcidano''' éte 'nu comune [[Italie|tagliáne]] de 2.912 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
