--- a/Santa_Giusta.mw
+++ b/Santa_Giusta.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Santa Giusta''' éte 'nu comune [[Italie|tagliáne]] de 4.408 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
