--- a/Santu_Lussurgiu.mw
+++ b/Santu_Lussurgiu.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Santu Lussurgiu''' éte 'nu comune [[Italie|tagliáne]] de 2.664 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
