--- a/Scano_di_Montiferro.mw
+++ b/Scano_di_Montiferro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Scano di Montiferro''' éte 'nu comune [[Italie|tagliáne]] de 1.725 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
