--- a/Sedilo.mw
+++ b/Sedilo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sedilo''' éte 'nu comune [[Italie|tagliáne]] de 2.445 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
