--- a/Senis.mw
+++ b/Senis.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Senis''' éte 'nu comune [[Italie|tagliáne]] de 7.236 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
