--- a/Siamaggiore.mw
+++ b/Siamaggiore.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Siamaggiore''' éte 'nu comune [[Italie|tagliáne]] de 996 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
