--- a/Siamanna.mw
+++ b/Siamanna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Siamanna''' éte 'nu comune [[Italie|tagliáne]] de 863 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
