--- a/Siapiccia.mw
+++ b/Siapiccia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Siapiccia''' éte 'nu comune [[Italie|tagliáne]] de 376 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
