--- a/Simala.mw
+++ b/Simala.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Simala''' éte 'nu comune [[Italie|tagliáne]] de 399 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
