--- a/Soddì.mw
+++ b/Soddì.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Soddì''' éte 'nu comune [[Italie|tagliáne]] de 142 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
