--- a/Sorradile.mw
+++ b/Sorradile.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sorradile''' éte 'nu comune [[Italie|tagliáne]] de 497 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
