--- a/Suni.mw
+++ b/Suni.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Suni''' éte 'nu comune [[Italie|tagliáne]] de 1.237 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
