--- a/Tadasuni.mw
+++ b/Tadasuni.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tadasuni''' éte 'nu comune [[Italie|tagliáne]] de 198 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
