--- a/Terralba.mw
+++ b/Terralba.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Terralba''' éte 'nu comune [[Italie|tagliáne]] de 10.350 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
