--- a/Tinnura.mw
+++ b/Tinnura.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tinnura''' éte 'nu comune [[Italie|tagliáne]] de 272 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
