--- a/Tramatza.mw
+++ b/Tramatza.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tramatza''' éte 'nu comune [[Italie|tagliáne]] de 998 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
