--- a/Uras.mw
+++ b/Uras.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Uras''' éte 'nu comune [[Italie|tagliáne]] de 3.084 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
