--- a/Ula_Tirso.mw
+++ b/Ula_Tirso.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ulà Tirso''' éte 'nu comune [[Italie|tagliáne]] de 634 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
