--- a/Nuoro.mw
+++ b/Nuoro.mw
@@ -30,6 +30,8 @@
 '''Nuoro''' éte 'nu comune [[Italie|tagliáne]] de 36.672 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
 
 [[an:Nùgoro]]
 [[ar:نوورو]]
