--- a/Aritzo.mw
+++ b/Aritzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Aritzo''' éte 'nu comune [[Italie|tagliáne]] de 1.544 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
