--- a/Austis.mw
+++ b/Austis.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Austis''' éte 'nu comune [[Italie|tagliáne]] de 959 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
