--- a/Birori.mw
+++ b/Birori.mw
@@ -2,7 +2,9 @@
 
 '''Birori''' éte 'nu comune [[Italie|tagliáne]] de 591 crestiáne.
 
-[[Category:Gëografije]]
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
 
 [[an:Bìroro]]
 [[ca:Birori]]
