--- a/Bitti.mw
+++ b/Bitti.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bitti''' éte 'nu comune [[Italie|tagliáne]] de 3.481 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
