--- a/Bolotana.mw
+++ b/Bolotana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bolotana''' éte 'nu comune [[Italie|tagliáne]] de 3.276 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
