--- a/Dualchi.mw
+++ b/Dualchi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Dualchi''' éte 'nu comune [[Italie|tagliáne]] de 764 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
