--- a/Gadoni.mw
+++ b/Gadoni.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gadoni''' éte 'nu comune [[Italie|tagliáne]] de 990 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
