--- a/Galtellì.mw
+++ b/Galtellì.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Galtellì''' éte 'nu comune [[Italie|tagliáne]] de 2.431 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
