--- a/Gavoi.mw
+++ b/Gavoi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gavoi''' éte 'nu comune [[Italie|tagliáne]] de 3.011 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
