--- a/Loculi.mw
+++ b/Loculi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Loculi''' éte 'nu comune [[Italie|tagliáne]] de 540 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
