--- a/Lodè.mw
+++ b/Lodè.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lodè''' éte 'nu comune [[Italie|tagliáne]] de 2.164 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
