--- a/Lula_(NU).mw
+++ b/Lula_(NU).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Lula (NU)''' éte 'nu comune [[Italie|tagliáne]] de 1.647 crestiáne.
-[[Category:Gëografije]]
+'''Lula''' éte 'nu comune [[Italie|tagliáne]] de 1.647 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
