--- a/Macomer.mw
+++ b/Macomer.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Macomer''' éte 'nu comune [[Italie|tagliáne]] de 10.991 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
