--- a/Mamoiada.mw
+++ b/Mamoiada.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Mamoiada''' éte 'nu comune [[Italie|tagliáne]] de 2.605 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
