--- a/Meana_Sardo.mw
+++ b/Meana_Sardo.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Meana Sardo''' éte 'nu comune [[Italie|tagliáne]] de 2.060 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
 
 [[an:Meana]]
 [[ca:Meana Sardo]]
