--- a/Oliena.mw
+++ b/Oliena.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Oliena''' éte 'nu comune [[Italie|tagliáne]] de 7.564 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
