--- a/Olzai.mw
+++ b/Olzai.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Olzai''' éte 'nu comune [[Italie|tagliáne]] de 1.046 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
