--- a/Onanì.mw
+++ b/Onanì.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Onanì''' éte 'nu comune [[Italie|tagliáne]] de 473 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
