--- a/Onifai.mw
+++ b/Onifai.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Onifai''' éte 'nu comune [[Italie|tagliáne]] de 766 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
