--- a/Orgosolo.mw
+++ b/Orgosolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Orgosolo''' éte 'nu comune [[Italie|tagliáne]] de 4.538 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
