--- a/Orosei.mw
+++ b/Orosei.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Orosei''' éte 'nu comune [[Italie|tagliáne]] de 6.206  crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
