--- a/Orotelli.mw
+++ b/Orotelli.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Orotelli''' éte 'nu comune [[Italie|tagliáne]] de 2.314 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
