--- a/Ortueri.mw
+++ b/Ortueri.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ortueri''' éte 'nu comune [[Italie|tagliáne]] de 1.435 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
