--- a/Osidda.mw
+++ b/Osidda.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Osidda''' éte 'nu comune [[Italie|tagliáne]] de 266 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
