--- a/Ottana.mw
+++ b/Ottana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ottana''' éte 'nu comune [[Italie|tagliáne]] de 2.526 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
