--- a/Posada.mw
+++ b/Posada.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Posada''' éte 'nu comune [[Italie|tagliáne]] de 2.394 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
