--- a/Sarule.mw
+++ b/Sarule.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sarule''' éte 'nu comune [[Italie|tagliáne]] de 1.905 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
