--- a/Sindia.mw
+++ b/Sindia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sindia''' éte 'nu comune [[Italie|tagliáne]] de 1.971 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
