--- a/Sorgono.mw
+++ b/Sorgono.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sorgono''' éte 'nu comune [[Italie|tagliáne]] de 1.949 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
