--- a/Teti_(NU).mw
+++ b/Teti_(NU).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Teti (NU)''' éte 'nu comune [[Italie|tagliáne]] de 807 crestiáne.
-[[Category:Gëografije]]
+'''Teti''' éte 'nu comune [[Italie|tagliáne]] de 807 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
