--- a/Tonara.mw
+++ b/Tonara.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tonara''' éte 'nu comune [[Italie|tagliáne]] de 2.397 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
