--- a/Torpè.mw
+++ b/Torpè.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Torpè''' éte 'nu comune [[Italie|tagliáne]] de 2.719 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Nuoro]]
+{{Provinge de Nuoro}}
