--- a/Arzana.mw
+++ b/Arzana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Arzana''' éte 'nu comune [[Italie|tagliáne]] de 2.730 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
