--- a/Bari_Sardo.mw
+++ b/Bari_Sardo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bari Sardo''' éte 'nu comune [[Italie|tagliáne]] de 3.871 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
