--- a/Baunei.mw
+++ b/Baunei.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Baunei''' éte 'nu comune [[Italie|tagliáne]] de 3.886 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
