--- a/Cardedu.mw
+++ b/Cardedu.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cardedu''' éte 'nu comune [[Italie|tagliáne]] de 1.465 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
