--- a/Elini.mw
+++ b/Elini.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Elini''' éte 'nu comune [[Italie|tagliáne]] de 553 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
