--- a/Lanusei.mw
+++ b/Lanusei.mw
@@ -31,6 +31,8 @@
 |sito = http://www.comunedilanusei.it
 }}
 
-'''Lanusei''' éte 'nu comune [[Italie|tagliáne]] de 5.812 crestiáne.
+'''Lanusei''' éte 'nu comune [[Itaglie|tagliáne]] de 5.812 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
