--- a/Lotzorai.mw
+++ b/Lotzorai.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lotzorai''' éte 'nu comune [[Italie|tagliáne]] de 2.150 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
