--- a/Osini.mw
+++ b/Osini.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Osini''' éte 'nu comune [[Italie|tagliáne]] de 947 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
