--- a/Perdasdefogu.mw
+++ b/Perdasdefogu.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Perdasdefogu''' éte 'nu comune [[Italie|tagliáne]] de 2.331 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
