--- a/Seui.mw
+++ b/Seui.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Seui''' éte 'nu comune [[Italie|tagliáne]] de 1.587 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
