--- a/Talana.mw
+++ b/Talana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Talana''' éte 'nu comune [[Italie|tagliáne]] de 1.129 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
