--- a/Tertenia.mw
+++ b/Tertenia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tertenia''' éte 'nu comune [[Italie|tagliáne]] de 3.726 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
