--- a/Tortolì.mw
+++ b/Tortolì.mw
@@ -33,6 +33,8 @@
 '''Tortolì''' éte 'nu comune [[Italie|tagliáne]] de 10.207 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
 
 [[an:Tortuelie]]
 [[ca:Tortolì]]
