--- a/Triei.mw
+++ b/Triei.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Triei''' éte 'nu comune [[Italie|tagliáne]] de 1.115 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
