--- a/Ulassai.mw
+++ b/Ulassai.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ulassai''' éte 'nu comune [[Italie|tagliáne]] de 1.613 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
