--- a/Urzulei.mw
+++ b/Urzulei.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Urzulei''' éte 'nu comune [[Italie|tagliáne]] de 1.443 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
