--- a/Arbus.mw
+++ b/Arbus.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Arbus''' éte 'nu comune [[Italie|tagliáne]] de 6.895 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
