--- a/Barumini.mw
+++ b/Barumini.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Barumini''' éte 'nu comune [[Italie|tagliáne]] de 1.413 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
