--- a/Genuri.mw
+++ b/Genuri.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Genuri''' éte 'nu comune [[Italie|tagliáne]] de 386 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
