--- a/Guspini.mw
+++ b/Guspini.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Guspini''' éte 'nu comune [[Italie|tagliáne]] de 12.560 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
