--- a/Las_Plassas.mw
+++ b/Las_Plassas.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Las Plassas''' éte 'nu comune [[Italie|tagliáne]] de 269 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
