--- a/Ippazio_Stefàno.mw
+++ b/Ippazio_Stefàno.mw
@@ -4,7 +4,7 @@
 |PostCognome = 'u chiamane Ezio
 |Sesso = M
 |LuogoNascita = Casarano
-|GiornoMeseNascita = 25 agoste
+|GiornoMeseNascita = 25 agùste
 |AnnoNascita = 1945
 |LuogoMorte = 
 |GiornoMeseMorte = 
@@ -21,11 +21,11 @@
 Da 'u [[14 sciugne]] [[2007]] ète ìu sinnache de Tarde.
 
 Ete lauriate 'n medicine e chirurghjie all'Università de [[Bari]] jndr'à [[1970]], ha sembre fatjate a [[Tarde]] apprime cumme a urologhe da 'u 1971 a 'u 1972 eppò cumme pediatre da 'u 1972 a 'u 1992.
-Ha stat autore de nu sacc de mission umanitarie in [[Africa]] (jndr'à u 1974 quanne aver fnit u viagge in [[Benin]], ha avut nu premie da l'associazione [[Midece senza frondiere]]), da 'u 1988 ète bbuen pe fà u primarije.
+Ha stat autore de nu sacc de mission umanitarie in [[Africa]] (jndr'à u 1974 quanne avère spicciate 'u viagge in [[Benin]], ha avute 'nu premie da l'associazione [[Midece senza frondiere]]), da 'u 1988 ète bbuene pe fà 'u primarije.
 
-Da 'u 1982 a 'u 1992 ha stat [[conzigliere comunale]] de [[Tarde]], apprim cu 'u [[Partite Comunista Tagliàne|PCI]] eppò cu 'u [[Partite de le Democratece de Sinistra|PDS]]. Ha stat Assessor 'a la sanità jndr'à 'u 1991, all [[elezioni politiche del 1992]] ha stat elett senatore 'nmizz a 'u PDS e doje anne appriss ha stat elett notra vote a [[Palazzo Madama]].
+Da 'u 1982 a 'u 1992 ha stat [[conzigliere comunale]] de [[Tarde]], apprime cu 'u [[Partite Comunista Tagliàne|PCI]] eppò cu 'u [[Partite de le Democratece de Sinistra|PDS]]. Ha state Assessore 'a la sanità jndr'à 'u 1991, a le [[eleziune politeche d'u 1992]] ha state elette senatore 'mmienze a 'u PDS e doje anne apprisse ha state elette 'n'otra vote a [[Palazzo Madama]].
 
-Da 'u 1996 sa allundanate nu picche da 'a politiche, puccè s'ambignate pe le attività umanitarie e professionale. Alle [[elezioni amministrative italiane 2007|elezioni amministrative]] d'u 2007 ha decise cu se candidesce [[sinnache]] de [[Tarde]]: face a lotta cu [[Giuanne Florido]], [[Euggenie Introcaso]], [[Giancarle Cito]] pe c'addevende [[sinnache]].
+Da 'u 1996 sa allundanate nu picche da 'a politiche, puccè s'ambignate pe le attività umanitarie e professionale. Alle [[eleziune amministrative tagliàne 2007|eleziune amministrative]] d'u 2007 ha decise cu se candidesce [[sinnache]] de [[Tarde]]: face 'a lotta cu [[Giuanne Florido]], [[Euggenie Introcaso]], [[Giancarle Cito]] pe c'addevende [[sinnache]].
 
 {{Box successione
 |carica = Sinnache de [[Tarde]]
