--- a/Lunamatrona.mw
+++ b/Lunamatrona.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lunamatrona''' éte 'nu comune [[Italie|tagliáne]] de 1.821 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
