--- a/Pabillonis.mw
+++ b/Pabillonis.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pabillonis''' éte 'nu comune [[Italie|tagliáne]] de 3.044 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
