--- a/Pauli_Arbarei.mw
+++ b/Pauli_Arbarei.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pauli Arbarei''' éte 'nu comune [[Italie|tagliáne]] de 720 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
