--- a/San_Gavino_Monreale.mw
+++ b/San_Gavino_Monreale.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Gavino Monreale''' éte 'nu comune [[Italie|tagliáne]] de 9.460 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
