--- a/Sanluri.mw
+++ b/Sanluri.mw
@@ -33,3 +33,5 @@
 '''Sanluri''' éte 'nu comune [[Italie|tagliáne]] de 8.539 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
