--- a/Sardara.mw
+++ b/Sardara.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sardara''' éte 'nu comune [[Italie|tagliáne]] de 4.350 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
