--- a/Serramanna.mw
+++ b/Serramanna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Serramanna''' éte 'nu comune [[Italie|tagliáne]] de 9.443 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
