--- a/Serrenti.mw
+++ b/Serrenti.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Serrenti''' éte 'nu comune [[Italie|tagliáne]] de 5.125 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
