--- a/Tuili.mw
+++ b/Tuili.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tuili''' éte 'nu comune [[Italie|tagliáne]] de 1.185 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
