--- a/Villacidro.mw
+++ b/Villacidro.mw
@@ -32,3 +32,5 @@
 '''Villacidro''' ète nu comune de 14.586 cristiane.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge d'u Medio Campidano]]
+{{Provinge d'u Medio Campidano}}
