--- a/Calasetta.mw
+++ b/Calasetta.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Calasetta''' éte 'nu comune [[Italie|tagliáne]] de 2.745 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
