--- a/Carbonia.mw
+++ b/Carbonia.mw
@@ -33,5 +33,7 @@
 }}
 
 '''Carbonia''' éte 'nu comune [[Italie|tagliáne]] de 30.505 crestiáne.
-[[Category:Gëografije]]
-[[Category::Sardegna]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
