--- a/Carloforte.mw
+++ b/Carloforte.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Carloforte''' éte 'nu comune [[Italie|tagliáne]] de 6.488 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
