--- a/Domusnovas.mw
+++ b/Domusnovas.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Domusnovas''' éte 'nu comune [[Italie|tagliáne]] de 6.504 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
