--- a/Fluminimaggiore.mw
+++ b/Fluminimaggiore.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Fluminimaggiore''' éte 'nu comune [[Italie|tagliáne]] de 3.134 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
