--- a/Giba.mw
+++ b/Giba.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Giba''' éte 'nu comune [[Italie|tagliáne]] de 2.093 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
