--- a/Gonnesa.mw
+++ b/Gonnesa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gonnesa''' éte 'nu comune [[Italie|tagliáne]] de 5.184 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
