--- a/Iglesias.mw
+++ b/Iglesias.mw
@@ -34,6 +34,8 @@
 '''Iglesias''' éte 'nu comune [[Italie|tagliáne]] de 27.772 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
 
 [[an:Igrèsias]]
 [[ca:Esglésies]]
