--- a/Musei_(CI).mw
+++ b/Musei_(CI).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Musei (CI)''' éte 'nu comune [[Italie|tagliáne]] de 1.506 crestiáne.
-[[Category:Gëografije]]
+'''Musei''' éte 'nu comune [[Italie|tagliáne]] de 1.506 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
