--- a/Narcao.mw
+++ b/Narcao.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Narcao''' éte 'nu comune [[Italie|tagliáne]] de 3.365 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
