--- a/Piscinas.mw
+++ b/Piscinas.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Piscinas''' éte 'nu comune [[Italie|tagliáne]] de 886 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
