--- a/Portoscuso.mw
+++ b/Portoscuso.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Portoscuso''' éte 'nu comune [[Italie|tagliáne]] de 5.361 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
