--- a/San_Giovanni_Suergiu.mw
+++ b/San_Giovanni_Suergiu.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Giovanni Suergiu''' éte 'nu comune [[Italie|tagliáne]] de 6.116 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
