--- a/Sant'Anna_Arresi.mw
+++ b/Sant'Anna_Arresi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sant'Anna Arresi''' éte 'nu comune [[Italie|tagliáne]] de 2.583 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
