--- a/Santadi.mw
+++ b/Santadi.mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Santadi''' éte 'nu comune [[Italie|tagliáne]] de 3.767 crestiáne.
-[[Category:Gëografije]]
+'''Santadi''' éte 'nu comune [[Itaglie|tagliáne]] de 3.767 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
