--- a/Aglientu.mw
+++ b/Aglientu.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Aglientu''' éte 'nu comune [[Italie|tagliáne]] de 1.125 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
