--- a/Alà_dei_Sardi.mw
+++ b/Alà_dei_Sardi.mw
@@ -1,5 +1,9 @@
 {{S}}
 '''Alà dei Sardi''' éte 'nu comune [[Italie|tagliáne]] de 1.949 crestiáne.
 
-Site: [http://www.aladeisardi.altervista.org Alà dei Sardi]
-[[Category:Gëografije]]
+== Collegaminde fore a Uicchipedie ==
+[http://www.aladeisardi.altervista.org Alà dei Sardi]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
