--- a/Arzachena.mw
+++ b/Arzachena.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Arzachena''' éte 'nu comune [[Italie|tagliáne]] de 12.122 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
