--- a/Badesi.mw
+++ b/Badesi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Badesi''' éte 'nu comune [[Italie|tagliáne]] de 1.862 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
