--- a/Berchidda.mw
+++ b/Berchidda.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Berchidda''' éte 'nu comune [[Italie|tagliáne]] de 3.177 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
