--- a/Bortigiadas.mw
+++ b/Bortigiadas.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bortigiadas''' éte 'nu comune [[Italie|tagliáne]] de 896 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
