--- a/Buddusò.mw
+++ b/Buddusò.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Buddusò''' éte 'nu comune [[Italie|tagliáne]] de 4.145 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
