--- a/Budoni.mw
+++ b/Budoni.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Budoni''' éte 'nu comune [[Italie|tagliáne]] de 4.361 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
