--- a/Calangianus.mw
+++ b/Calangianus.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Calangianus''' éte 'nu comune [[Italie|tagliáne]] de 4.642 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
