--- a/Golfo_Aranci.mw
+++ b/Golfo_Aranci.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Golfo Aranci''' éte 'nu comune [[Italie|tagliáne]] de 2.206 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
