--- a/La_Maddalena.mw
+++ b/La_Maddalena.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''La Maddalena''' éte 'nu comune [[Italie|tagliáne]] de 11.478 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
