--- a/Loiri_Porto_San_Paolo.mw
+++ b/Loiri_Porto_San_Paolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Loiri Porto San Paolo''' éte 'nu comune [[Italie|tagliáne]] de 2.508 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
