--- a/Luogosanto.mw
+++ b/Luogosanto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Luogosanto''' éte 'nu comune [[Italie|tagliáne]] de 1.822 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
