--- a/Luras.mw
+++ b/Luras.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Luras''' éte 'nu comune [[Italie|tagliáne]] de 2.618 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
