--- a/Monti.mw
+++ b/Monti.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Monti''' éte 'nu comune [[Italie|tagliáne]] de 5.316 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
