--- a/Olbia.mw
+++ b/Olbia.mw
@@ -31,6 +31,8 @@
 '''Olbia''' éte 'nu comune [[Italie|tagliáne]] de 51.429 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
 
 [[an:Terranoa]]
 [[ar:أولبيا]]
