--- a/Padru.mw
+++ b/Padru.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Padru''' éte 'nu comune [[Italie|tagliáne]] de 2.109 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
