--- a/Palau_(OT).mw
+++ b/Palau_(OT).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Palau (OT)''' éte 'nu comune [[Italie|tagliáne]] de 4084 crestiáne.
-[[Category:Gëografije]]
+'''Palau''' éte 'nu comune [[Italie|tagliáne]] de 4084 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
