--- a/San_Teodoro_(OT).mw
+++ b/San_Teodoro_(OT).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''San Teodoro (OT)''' éte 'nu comune [[Italie|tagliáne]] de 3.623 crestiáne.
-[[Category:Gëografije]]
+'''San Teodoro''' éte 'nu comune [[Italie|tagliáne]] de 3.623 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
