--- a/Sant'Antonio_di_Gallura.mw
+++ b/Sant'Antonio_di_Gallura.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sant'Antonio di Gallura''' éte 'nu comune [[Italie|tagliáne]] de 1.626 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
