--- a/Sanda_Teresa_de_Gallura.mw
+++ b/Sanda_Teresa_de_Gallura.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Santa Teresa Gallura''' éte 'nu comune [[Italie|tagliáne]] de 4.816 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
