--- a/Telti.mw
+++ b/Telti.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Telti''' éte 'nu comune [[Italie|tagliáne]] de 1.968 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
