--- a/Tempio_Pausania.mw
+++ b/Tempio_Pausania.mw
@@ -31,6 +31,8 @@
 '''Tempio Pausania''' éte 'nu comune [[Italie|tagliáne]] de 14.128 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
 
 [[an:Tèmpiu]]
 [[bg:Темпио Паузания]]
