--- a/Trinità_d'Agultu_e_Vignola.mw
+++ b/Trinità_d'Agultu_e_Vignola.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Trinità d'Agultu e Vignola''' éte 'nu comune [[Italie|tagliáne]] de 2.029 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Olbia-Tempio]]
+{{Provinge de Olbia-Tempio}}
