--- a/Capriva_del_Friuli.mw
+++ b/Capriva_del_Friuli.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Capriva del Friuli''' éte 'nu comune [[Italie|tagliáne]] de 1.701 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
