--- a/Dolegna_d'u_Collio.mw
+++ b/Dolegna_d'u_Collio.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Dolegna d'u Collio''' éte 'nu comune [[Italie|tagliáne]] de 417 crestiáne.
-[[Category:Sciugrafije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
 
 [[ca:Dolegna del Collio]]
 [[en:Dolegna del Collio]]
