--- a/Fogliano_Redipuglia.mw
+++ b/Fogliano_Redipuglia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Fogliano Redipuglia''' éte 'nu comune [[Italie|tagliáne]] de 2.813 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
