--- a/Grado_(GO).mw
+++ b/Grado_(GO).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Grado (GO)''' éte 'nu comune [[Italie|tagliáne]] de 8.641 crestiáne.
-[[Category:Gëografije]]
+'''Grado''' éte 'nu comune [[Italie|tagliáne]] de 8.641 crestiáne.
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
