--- a/Medea_(GO).mw
+++ b/Medea_(GO).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Medea (GO)''' éte 'nu comune [[Italie|tagliáne]] de 937 crestiáne.
-[[Category:Gëografije]]
+'''Medea''' éte 'nu comune [[Italie|tagliáne]] de 937 crestiáne.
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
