--- a/Monfalcone.mw
+++ b/Monfalcone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Monfalcone''' éte 'nu comune [[Italie|tagliáne]] de 27.701 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
