--- a/Mossa.mw
+++ b/Mossa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Mossa''' éte 'nu comune [[Italie|tagliáne]] de 1.643 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
