--- a/Romans_d'Isonzo.mw
+++ b/Romans_d'Isonzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Romans d'Isonzo''' éte 'nu comune [[Italie|tagliáne]] de 3.604 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
